--- a/css/style.css
+++ b/css/style.css
@@ -29,7 +29,7 @@ a:hover {
 .profile-image {
   height: 220px;
   width: 230px;
-  border-radius: 10%
+  border-radius: 10%;
 }
 
 .header {
@@ -47,7 +47,8 @@ a:hover {
 }
 
 .code-icon {
-  font-size: 72px;
+  font-size: 80px;
+  margin-top: 60px;
 }
 
 section .container {
@@ -79,4 +80,8 @@ section .container {
 #contact {
   padding: 60px 0 130px;
   background-color: #111111;
+}
+
+.white-txt {
+  color: #fff;
 }
