--- a/css/components/card.css
+++ b/css/components/card.css
@@ -16,6 +16,11 @@
   padding-bottom: 10px;
 }
 
+.project-card img {
+  box-shadow: 0 0 15px #ffffff1a;
+  border: 1px solid #2d2d2d;
+}
+
 .card-btn {
   margin: 5px;
   color: #fff;
