added tooltips for project stack icons

--- a/css/style.css
+++ b/css/style.css
@@ -95,6 +95,28 @@ section .container {
   padding: 60px 0 60px;
 }
 
+.tooltipicon {
+  position: relative;
+  display: inline-block;
+}
+
+.tooltipicon + .tooltiptext {
+  visibility: hidden;
+  width: 100px;
+  background-color: rgba(0, 0, 0, 0.672);
+  color: #fff;
+  font-size: 12px;
+  text-align: center;
+  border-radius: 6px;
+  padding: 5px 0;
+  position: absolute;
+  z-index: 1;
+  transform:translate(-50%, -100%);
+}
+
+.tooltipicon:hover + .tooltiptext {
+  visibility: visible;
+}
 
 @media only screen and (min-width: 768px) and (max-width:1024px) {
   .banner-wrap {
