--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,6 @@
 @import url("components/banner.css");
 @import url("components/card.css");
-@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600&display=block');
 
 html {
   scroll-behavior: smooth;
