--- a/css/style.css
+++ b/css/style.css
@@ -28,12 +28,6 @@ a:hover {
   transform: scale(1.1);
 }
 
-.profile-image {
-  height: 220px;
-  width: 230px;
-  border-radius: 10%;
-}
-
 .header {
   font-size: 30pt;
   font-weight: 700;
@@ -52,7 +46,6 @@ a:hover {
 .description {
   text-align: center;
   font-weight: 300;
-  margin-top: 100px;
   align-items: center;
 }
 
@@ -87,8 +80,20 @@ section .container {
 }
 
 #about {
-  padding: 100px 0 60px;
+  padding: 0 0 60px;
   background-color: #111111;
+}
+
+#about-me {
+  padding: 100px 0 0;
+  background-image: url("../images/purplegr_line.png");
+  background-repeat: no-repeat;
+  background-size: 40% 100%;
+}
+
+.profile-image {
+  height: 100%;
+  width: 120%;
 }
 
 #projects {
@@ -119,6 +124,26 @@ section .container {
   visibility: visible;
 }
 
+@media only screen and (min-width: 1350px) {
+  .profile-image {
+    transform: translate(-10%);
+    width: 130%;
+  }
+}
+
+@media only screen and (min-width: 768px) and (max-width:992px) {
+  #about-me {
+    padding: 50px 0 0;
+    background-size: 600px 540px;
+    background-position: 50% 0%;
+  }
+
+  .profile-image {
+    height: 440px;
+    width: 580px;
+  }
+}
+
 @media only screen and (min-width: 768px) and (max-width:1024px) {
   .banner-wrap {
       top: 40%;
@@ -126,9 +151,20 @@ section .container {
   }
 }
 
-@media only screen and (max-width: 767px) {
+@media only screen and (max-width: 768px) {
   #about {
-      padding:50px 10px 40px;
+      padding: 0px 10px 40px;
+  }
+
+  #about-me {
+    padding: 50px 0 0;
+    background-size: 300px 280px;
+    background-position: 50% 0%;
+  }
+
+  .profile-image {
+    height: 220px;
+    width: 290px;
   }
 
   .description {
