Added scroll to top button

--- a/css/style.css
+++ b/css/style.css
@@ -123,6 +123,37 @@ section .container {
   visibility: visible;
 }
 
+.myBtn {
+  opacity: 0;
+  position: fixed;
+  bottom: 20px;
+  right: 30px;
+  z-index: 99;
+  border: 1px solid rgba(255, 255, 255, 0.211);
+  outline: none;
+  background-color: rgba(255, 255, 255, 0.125);
+  color: rgb(191, 191, 191);
+  box-shadow: 0 0 5px rgba(255, 255, 255, 0.339);
+  cursor: pointer;
+  padding: 6px 16px;
+  border-radius: 50%;
+  font-size: 30px;
+  transition: opacity 0.5s, color 0.2s, background-color 0.2s;
+}
+
+.myBtn:focus {
+  outline: none;
+}
+
+.myBtn.active {
+  opacity: 1;
+}
+
+.myBtn:hover {
+  background-color: rgba(255, 255, 255, 0.444);
+  color: rgb(246, 246, 246);
+}
+
 @media only screen and (min-width: 1350px) {
   .profile-image {
     transform: translate(-10%);
@@ -205,5 +236,15 @@ section .container {
 
   .cards {
     padding: 10px;
+  }
+
+  .myBtn {
+    bottom: 20px;
+    right: 20px;
+  }
+
+  .myBtn:hover {
+    background-color: rgba(255, 255, 255, 0.125);
+    color: rgb(191, 191, 191);
   }
 }
