--- a/css/style.css
+++ b/css/style.css
@@ -154,6 +154,37 @@ section .container {
   color: rgb(246, 246, 246);
 }
 
+.topnav {
+  opacity: 0;
+  position: fixed;
+  display: flex;
+  z-index: 99;
+  background-color: #000000cf;
+  overflow: hidden;
+  width: 100%;
+  align-items: center;
+  transition: opacity 0.5s;
+}
+
+.topnav.active {
+  opacity: 1;
+}
+
+.topnav a {
+  float: left;
+  color: #f2f2f2;
+  text-align: center;
+  padding: 14px 16px;
+  text-decoration: none;
+  font-size: 26px;
+  box-shadow: #111111;
+}
+
+.topnav a:hover {
+  background-color: #ddd;
+  color: black;
+}
+
 @media only screen and (min-width: 1350px) {
   .profile-image {
     transform: translate(-10%);
@@ -246,5 +277,10 @@ section .container {
   .myBtn:hover {
     background-color: rgba(255, 255, 255, 0.125);
     color: rgb(191, 191, 191);
+  }
+
+  .topnav a:hover {
+    background-color: #000000cf;
+    color: #f2f2f2;
   }
 }
