--- a/css/components/card.css
+++ b/css/components/card.css
@@ -9,19 +9,6 @@
   color: #ffffff6a;
 }
 
-.project-card {
-  text-align: center;
-  margin-top: 16px;
-  margin-bottom: 16px;
-  padding-top: 10px;
-  padding-bottom: 10px;
-}
-
-.project-card img {
-  box-shadow: 0 0 15px #ffffff1a;
-  border: 1px solid #2d2d2d;
-}
-
 .card-btn {
   margin: 5px;
   color: #fff;
@@ -41,6 +28,19 @@
   text-decoration: none;
 }
 
+.project-card {
+  text-align: center;
+  margin-top: 16px;
+  margin-bottom: 16px;
+  padding-top: 10px;
+  padding-bottom: 10px;
+}
+
+.project-card img {
+  box-shadow: 0 0 15px #ffffff1a;
+  border: 1px solid #2d2d2d;
+}
+
 @media(max-width: 992px) {
   .cards {
     grid-template-columns: 1fr 1fr;
@@ -50,5 +50,6 @@
 @media(max-width: 768px) {
   .cards {
     grid-template-columns: 1fr;
+    padding: 10px;
   }
 }
